--- a/css/mio.css
+++ b/css/mio.css
@@ -28,7 +28,7 @@ table, th, td {
   font-size: 1.2em;
   text-align: center;
   background-color: #ccccc2;
-  background-image: url('https://liturgiadelashoras.github.io/images/fnd.jpg');
+  background-image: url('https://AlEncuentroconDios/liturgiadelashoras.github.io/images/fnd.jpg');
   background-repeat: repeat-x;
   visibility: visible;
   font-family: Verdana, Arial, Helvetica, sans-serif;
